test/fail/basic_syntax/self_initialize.lly
#[
SyntaxError: Attempt to use uninitialized value 'v'.
    from self_initialize.lly:6:
]#

var v = v
